# md-image-oss

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cli-release.yml  plugin-release.yml
cli/: README.md  __init__.py  config.py  pyproject.toml  requirements.txt  uploader.py
docs/: index.html  sprite.js  style.css
docs/blog/: v0.2.0-launch.md
md_image_oss/: __init__.py  cli.py  compressor.py  processor.py
md_image_oss/gui/: __init__.py  app.py  audit_log.py  audit_viewer.py  main_window.py  settings_dialog.py  settings_store.py  worker.py
md_image_oss/gui/widgets/: file_list.py  log_panel.py
obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  vitest.config.ts
obsidian-plugin/src/: i18n.ts  main.ts  settings.ts  types.d.ts
obsidian-plugin/src/core/: compressor.ts  pipeline.ts  regex.ts  resolver.ts  rewriter.ts  scanner.ts  uploader.ts
obsidian-plugin/src/ui/: FailureModal.ts  ImageListModal.ts  ImagePanelView.ts  ProgressNotice.ts
obsidian-plugin/src/util/: concurrency.ts  hash.ts  sizes.ts
obsidian-plugin/tests/: _obsidian-stub.ts  pipeline.test.ts  resolver.test.ts  rewriter.test.ts  scanner.test.ts
