[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-image-oss"
version = "0.1.0"
description = "Upload Markdown article images to Aliyun OSS, with high-quality compression."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["markdown", "aliyun", "oss", "image", "compression", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Environment :: Console",
]
dependencies = [
    "oss2>=2.18.0",
    "Pillow>=10.0.0",
]

[project.scripts]
md-oss = "md_image_oss.cli:main"

[tool.setuptools.packages.find]
include = ["md_image_oss*"]
